--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -154,8 +154,21 @@ a {
 .clients .image {
   display: flex;
   align-items: center;
-  margin-top: 96px;
+  margin-top: 70px;
   justify-content: space-between;
+}
+
+.clients .image a{
+  display: flex;
+  border-radius: 12px;
+  align-items: center;
+  padding: 0 42px;
+  height: 90px;
+}
+
+.clients .image a:hover{
+  box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.1);
+
 }
 
 /* ============= Guides ============ */
