--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -42,14 +42,22 @@ a {
   margin-right: auto;
 }
 /* ============= Header ============ */
-.header {
+.fixed-header{
+  padding-top: 26px;
+  position: sticky;
+  top: -26px;
+  z-index: 1;
+  background-color: #e6f0ff;
+}
+
+.hero-wrap {
   position: relative;
   height: 100vh;
   background-color: #e6f0ff;
 }
 
 .navbar {
-  padding-top: 38px;
+  padding: 12px 0;
   display: flex;
   align-items: center;
 }
@@ -89,7 +97,7 @@ a {
 /* ============= Hero ============ */
 
 .hero {
-  margin-top: 130px;
+  padding-top: 130px;
 }
 
 .hero .info {
@@ -639,7 +647,7 @@ a {
 }
 
 .footer .social-link img {
-  margin-right: 10px;
+  margin-right: 16px;
   border-radius: 3px;
   width: 28px;
   height: 28px;
