--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -7,6 +7,10 @@
   --primary-color: #0f1b4c;
 }
 
+html, body{
+  scroll-behavior: smooth;
+}
+
 html {
   font-size: 62.5%;
 }
@@ -42,7 +46,7 @@ a {
   margin-right: auto;
 }
 /* ============= Header ============ */
-.fixed-header{
+.header{
   padding-top: 26px;
   position: sticky;
   top: -26px;
@@ -52,7 +56,7 @@ a {
 
 .hero-wrap {
   position: relative;
-  height: 100vh;
+  height: calc(100vh - 90px);
   background-color: #e6f0ff;
 }
 
