--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -46,7 +46,7 @@ a {
   margin-right: auto;
 }
 /* ============= Header ============ */
-.header{
+.fixed-header{
   padding-top: 26px;
   position: sticky;
   top: -26px;
