--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -55,6 +55,8 @@ a {
 }
 
 .hero-wrap {
+  display: flex;
+  align-items: center;
   position: relative;
   height: calc(100vh - 90px);
   background-color: #e6f0ff;
@@ -100,9 +102,6 @@ a {
 
 /* ============= Hero ============ */
 
-.hero {
-  padding-top: 130px;
-}
 
 .hero .info {
   width: 51%;
